fix small css alignments

--- a/personaltimemanager.client/src/app/homepage/homepage.component.css
+++ b/personaltimemanager.client/src/app/homepage/homepage.component.css
@@ -13,7 +13,7 @@ h2 {
   flex-direction: column;
   gap: 15px;
   align-items: center;
-  max-height:50vh;
+  max-height:55vh;
   width:100%;
   overflow-y: auto;
   padding:10px;
@@ -91,7 +91,7 @@ h3 {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  width: 300px;
+  width: 350px;
   height: 50px;
   margin: auto;
   margin-top: 10px;
@@ -226,5 +226,5 @@ select {
 }
 
 .home__header__title {
-  width:300px;
+  width:350px;
 }
