--- a/personaltimemanager.client/src/app/task-form/task-form.component.css
+++ b/personaltimemanager.client/src/app/task-form/task-form.component.css
@@ -84,6 +84,8 @@ body {
 
 .form__group label {
   padding-bottom: .5rem;
+  text-align: left;
+  text-indent: 10px;
 }
 
 textarea.form__control {
